[package]
name = "hack_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = {version = "1.0.92"}
quote = {version = "1.0.37"}
syn = { features = ["full", "visit", "parsing"], version = "2.0.89"}
log = "0.4.22"

[lib]
proc-macro = true
